force-app/main/default/objects/cdcpc__RD_Source_Codes__c/cdcpc__RD_Source_Codes__c.object-meta.xml
<CustomObject>
    <label>RD Source Codes</label>
    <nameField>
        <label>RD Source Codes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Source Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>