force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__ArcRingSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ArcRingSC__c</fullName>
    <label>ArcRingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>