force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__GirdleCovSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GirdleCovSC__c</fullName>
    <label>GirdleCovSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>