force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__GirdleSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GirdleSC__c</fullName>
    <label>GirdleSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>