force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__HolderInlSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HolderInlSC__c</fullName>
    <label>HolderInlSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>