force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__HolderRingSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HolderRingSC__c</fullName>
    <label>HolderRingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>