force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__IGaskSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__IGaskSC__c</fullName>
    <label>IGaskSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>