force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__ILinerSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ILinerSC__c</fullName>
    <label>ILinerSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>