force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__IRingSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__IRingSC__c</fullName>
    <label>IRingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>