force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__Material_Sourcing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Material_Sourcing_Requirements__c</fullName>
    <label>Material Sourcing Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>