force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__MSealSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MSealSC__c</fullName>
    <label>MSealSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>