force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__OGaskSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OGaskSC__c</fullName>
    <label>OGaskSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>