force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__SlotCoverSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SlotCoverSC__c</fullName>
    <label>SlotCoverSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>