force-app/main/default/objects/cdcpc__RD_Source_Codes__c/fields/cdcpc__TSealSC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TSealSC__c</fullName>
    <label>TSealSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>